# compiler

./: .gitignore  CMakeLists.txt  README.md  report.md
examples/01_basic/: 01_hello.lang  02_int_arith.lang  03_float_arith.lang  04_bool_logic.lang  05_strings.lang  06_comparisons.lang  07_unary_and_comments.lang
examples/02_control_flow/: 01_if_else.lang  02_while.lang  03_for_range.lang  04_for_array.lang  05_break_continue.lang
examples/03_types/: 01_int_types.lang  02_cast.lang  03_arrays.lang  04_struct.lang  05_type_alias.lang
examples/04_functions/: 01_basic_call.lang  02_call_by_value.lang  03_recursion.lang  04_overloading.lang  05_hollow_return.lang  06_shadowing.lang
examples/05_methods/: 01_methods.lang  02_assoc_fns.lang  03_method_overloading.lang
examples/06_namespaces/: 01_basic_ns.lang  02_ns_no_conflict.lang
examples/08_advanced/: 01_pipe_basic.lang  02_pipe_partial.lang  03_defer_lifo.lang  04_defer_nested.lang  05_defer_early_return.lang  06_if_expr.lang  07_block_expr.lang  08_short_circuit.lang
examples/99_integration/: particles.lang  sort.lang  stats.lang
runtime/: CMakeLists.txt  runtime.c  runtime.h
specs/: codegen(1).md  grammar(2).md  semantics(2).md  types(2).md
src/: CMakeLists.txt  main.cpp
src/codegen/: codegen.cppm  llvm_emitter.cpp  llvm_types.cpp  mangle.cpp
src/diag/: _pod.h  diag.cppm  diagnostic.cpp  diagnostic.h  source.cpp  source.h
src/ir/: _pod.h  dump.cpp  dump.h  ir.cppm  ir.h  lowering.cpp  lowering.h
src/ir/opt/: const_fold.cpp  dce.cpp  passes.h
src/lexer/: _pod.h  lexer.cpp  lexer.cppm  lexer.h  token.h
src/parser/: _pod.h  ast.cppm  ast.h  ast_dump.cpp  ast_dump.cppm  ast_dump.h  parser.cpp  parser.cppm  parser.h
src/sema/: _pod.h  cflow_check.cpp  cflow_check.h  desugar.cpp  desugar.h  effect.cpp  effect.h  expr_check.cpp  move_check.cpp  move_check.h  overload.cpp  overload.h  scope.h  sema.cpp  sema.cppm  sema.h  symbol.h  type.h
